--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
