--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
