--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@tanstack/react-query": "^5.40.0",
+    "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
