--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.40.0",
     "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
