--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0",
