--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.11.0",
     "tailwind-merge": "^2.3.0",
